# MandelbrotSet

./: .gitignore  CMakeLists.txt
src/: cartesian.cpp  cartesian.hpp  constants.cpp  main.cpp  mandelbrot.cpp  mandelbrot.hpp  screen.cpp  screen.hpp
